fix: remove backticks from Breez SDK and Blockstream tools in Blitz Wallet section
- Remove backticks around Breez SDK, Blockstream Greenlight, and Blockstream Green Development Kit
- Maintains consistent formatting style throughout the document
- Improves readability by reducing unnecessary code formatting in prose

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -157,8 +157,8 @@ ensuring users maintain full control of their funds.
 
 Over the past year, Blitz refined its approach to onboarding new Bitcoin users
 through a “custodial ladder” model—starting with easy, guided defaults and
-progressing toward full self-custody. Built with the `Breez SDK`, `Blockstream
-Greenlight`, and the `Blockstream Green Development Kit`, Blitz combined these
+progressing toward full self-custody. Built with the Breez SDK, Blockstream
+Greenlight, and the Blockstream Green Development Kit, Blitz combined these
 open-source tools to provide a strong foundation while using Boltz for automatic
 channel rebalancing. However, maintaining multiple networks introduced
 complexity and fragmented balances.
