--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -157,11 +157,15 @@ ensuring users maintain full control of their funds.
 
 Over the past year, Blitz refined its approach to onboarding new Bitcoin users
 through a “custodial ladder” model—starting with easy, guided defaults and
-progressing toward full self-custody. Built with the Breez SDK, Blockstream
-Greenlight, and the Blockstream Green Development Kit, Blitz combined these
+progressing toward full self-custody. Built with the [Breez SDK], [Blockstream
+Greenlight], and the [Blockstream Green Development Kit][gdk], Blitz combined these
 open-source tools to provide a strong foundation while using Boltz for automatic
 channel rebalancing. However, maintaining multiple networks introduced
 complexity and fragmented balances.
+
+[Breez SDK]: https://github.com/breez
+[Blockstream Greenlight]: https://github.com/Blockstream/greenlight
+[gdk]: https://github.com/Blockstream/gdk
 
 With [OpenSats' support], Blitz streamlined its design into a simpler,
 Spark-based wallet. The latest version enables receiving payments while offline,
