--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -170,7 +170,7 @@ complexity and fragmented balances.
 With [OpenSats' support], Blitz streamlined its design into a simpler,
 Spark-based wallet. The latest version enables receiving payments while offline,
 maintaining inbound capacity, and exiting directly to on-chain bitcoin. A new
-[`Progressive Web App`] version [works on any browser] without relying on the
+[Progressive Web App] version [works on any browser] without relying on the
 app store.
 
 Blitz has integrated a built-in store, contact-based payments, and
@@ -197,7 +197,7 @@ great user experience.
 
 [Blitz Wallet]: https://blitzwalletapp.com/
 [OpenSats' support]: /blog/bitcoin-grants-july-2024-6th-wave#blitz-wallet
-[`Progressive Web App`]: https://github.com/BlitzWallet/blitz-web-app
+[Progressive Web App]: https://github.com/BlitzWallet/blitz-web-app
 [works on any browser]: https://wallet.blitzwalletapp.com/
 [point-of-sale tools]: https://github.com/BlitzWallet/blitz-wallet-pos
 [The Bitcoin Company]: https://www.thebitcoincompany.com/
