refactor: remove specific number from Blitz codebases reference
- Remove 'seven' from 'seven public codebases' to make text more general
- Avoids potential obsolescence if the number of codebases changes
- Maintains focus on the contribution rather than specific count

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -190,7 +190,7 @@ more efficient architecture.
 As the first live reference implementation of [Spark], Blitz offers insight for
 developers exploring the protocol. Each iteration of Blitz development continues
 to reduce mental effort while preserving sovereignty, showing that convenience
-and self-custody can progress together. Through its seven public codebases and
+and self-custody can progress together. Through its public codebases and
 coordination with upstream developers, Blitz contributes to the Bitcoin
 development stack, demonstrating how simplicity and sovereignty can align for a
 great user experience.
