--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -213,7 +213,7 @@ Operators can send and receive payments, manage channels, and monitor node
 activity through encrypted connections and user-defined permissions without
 relying on third parties.
 
-The project supports Lightning payment methods like instant `Keysend` transfers,
+The project supports Lightning payment methods like instant `keysend` transfers,
 standard Lightning invoices (`BOLT11`), reusable invoices (`BOLT12`), and
 Lightning URLs (`LNURL`). As a `Progressive Web App`, it offers a consistent
 browser experience with tools for channel management, payments, plugin control,
