refactor: add links for BOLT11 and BOLT12 specifications in Clams section
- Convert BOLT11 and BOLT12 from backticks to link references
- Add official specification website links for both BOLT standards
- Improves document utility by providing direct access to Lightning specifications

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -214,10 +214,13 @@ activity through encrypted connections and user-defined permissions without
 relying on third parties.
 
 The project supports Lightning payment methods like instant `keysend` transfers,
-standard Lightning invoices (`BOLT11`), reusable invoices (`BOLT12`), and
+standard Lightning invoices ([BOLT11]), reusable invoices ([BOLT12]), and
 Lightning URLs (`LNURL`). As a `Progressive Web App`, it offers a consistent
 browser experience with tools for channel management, payments, plugin control,
 and UTXO tracking.
+
+[BOLT11]: https://www.bolt11.org/
+[BOLT12]: https://bolt12.org/
 
 Supported [by OpenSats], Clams released [Remote v2], rebuilding the interface
 around a local database for faster performance and scalability. Nodes processing
