fix: remove backticks from progressive web app in Clams section
- Remove backticks around 'Progressive Web App' and convert to lowercase
- Maintains consistent formatting style throughout the document
- Improves readability by treating it as descriptive text rather than code

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -215,7 +215,7 @@ relying on third parties.
 
 The project supports Lightning payment methods like instant `keysend` transfers,
 standard Lightning invoices ([BOLT11]), reusable invoices ([BOLT12]), and
-LNURL. As a `Progressive Web App`, it offers a consistent
+LNURL. As a progressive web app, it offers a consistent
 browser experience with tools for channel management, payments, plugin control,
 and UTXO tracking.
 
