fix: remove backticks from plugins dashboard in Clams section
- Remove backticks around 'Plugins Dashboard' and convert to lowercase
- Update both text and link reference for consistency
- Maintains consistent formatting style throughout the document

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -231,7 +231,7 @@ Spanish.
 
 Clams simplified self-hosting through a [full integration] with Start9's
 StartOS, allowing one-click installation and updates. Features like the
-[`Plugins Dashboard`] have simplified a complex setup, making it manageable for
+[plugins dashboard] have simplified a complex setup, making it manageable for
 small businesses and educators locally.
 
 One major update was the unified dashboard for two CLN plugins: CLBOSS, which
@@ -264,7 +264,7 @@ usability within the Lightning ecosystem.
 [Remote v2]: https://github.com/clams-tech/Remote/releases/tag/remote-2.0.0
 [Version 2.1]: https://github.com/clams-tech/Remote/releases/tag/remote-2.1.0
 [full integration]: https://github.com/clams-tech/clams-remote-startos
-[`Plugins Dashboard`]: https://github.com/clams-tech/Remote/pull/269
+[plugins dashboard]: https://github.com/clams-tech/Remote/pull/269
 [BOLT12 Prisms]: https://github.com/clams-tech/Remote/pull/281
 [implemented]: https://github.com/clams-tech/Remote/releases/tag/remote-2.5.0
 [BOLT12 Decoder]: https://github.com/clams-tech/bolt12-decoder-app
