fix: remove backticks from Rust, TAPSIGNER, and SATSCARD in Cove section
- Remove backticks around Rust, TAPSIGNER, and SATSCARD references
- Update corresponding link references for consistency
- Maintains consistent formatting style throughout the document

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -278,9 +278,9 @@ self-custodial option compatible with hardware signing devices.
 
 OpenSats' [support helped] developer Praveen Perera advance Cove from prototype
 to production, releasing it as a non-custodial, Bitcoin-only wallet on the iOS
-App Store. Written in `Rust` and integrated through Swift and Kotlin bindings
-built on the Bitcoin Development Kit ([BDK]), the app supports [`TAPSIGNER`] and
-[`SATSCARD`] hardware cards that let users initialize, change PINs, create
+App Store. Written in Rust and integrated through Swift and Kotlin bindings
+built on the Bitcoin Development Kit ([BDK]), the app supports [TAPSIGNER] and
+[SATSCARD] hardware cards that let users initialize, change PINs, create
 backups, and [sign transactions] directly through NFC.
 
 Beyond Cove itself, Perera contributed upstream improvements to the Rust
@@ -323,8 +323,8 @@ control, and reinforcing open standards that underpin the Bitcoin network.
 [Cove]: https://covebitcoinwallet.com/
 [support helped]: https://opensats.org/blog/bitcoin-grants-july-2024#cove
 [BDK]: https://bitcoindevkit.org/
-[`TAPSIGNER`]: https://tapsigner.com/
-[`SATSCARD`]: https://store.coinkite.com/store/satscard
+[TAPSIGNER]: https://tapsigner.com/
+[SATSCARD]: https://store.coinkite.com/store/satscard
 [sign transactions]: https://github.com/notmandatory/rust-cktap/pull/29
 [BIP-329]: https://github.com/bitcoinppl/bip329
 [`rust-cktap`]: https://github.com/notmandatory/rust-cktap
