fix: remove backticks from BDK in Cove section
- Remove backticks around BDK for consistent formatting
- Maintains consistency with other BDK references throughout the document
- Improves readability by reducing unnecessary code formatting in prose

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -286,7 +286,7 @@ backups, and [sign transactions] directly through NFC.
 Beyond Cove itself, Perera contributed upstream improvements to the Rust
 ecosystem that make these features possible, including work on [BIP-329],
 [`rust-cktap`], and [`uniffi`], which powers Rust bindings used by projects like
-Cove and `BDK`. These upstream efforts directly strengthen Cove’s functionality
+Cove and BDK. These upstream efforts directly strengthen Cove’s functionality
 and the broader Bitcoin app ecosystem.
 
 The wallet supports [BIP-329] labels, which let users name and organize
