fix: simplify BBQr reference in Cove section
- Remove backticks around BBQr and simplify link reference
- Remove descriptive text from link reference for cleaner formatting
- Maintains consistent formatting style throughout the document

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -303,7 +303,7 @@ duress, adding security through plausible deniability.
 > <cite>—Praveen Perera</cite>
 
 Cove also improved compatibility through [Swift] and [Android] bindings for the
-[`BBQr` animated-QR protocol]. This system breaks large transaction files into
+[BBQr] animated-QR protocol. This system breaks large transaction files into
 scannable QR sequences, allowing air-gapped hardware wallets to sign
 transactions offline while keeping private keys isolated. Developers from other
 projects, including [Fully Noded], have adopted this method to standardize
@@ -331,7 +331,7 @@ control, and reinforcing open standards that underpin the Bitcoin network.
 [`uniffi`]: https://github.com/mozilla/uniffi-rs
 [Swift]: https://github.com/bitcoinppl/bbqr-swift
 [Android]: https://central.sonatype.com/artifact/org.bitcoinppl/bbqr-android/overview
-[`BBQr` animated-QR protocol]: https://github.com/bitcoinppl/bbqr-ffi
+[BBQr]: https://github.com/bitcoinppl/bbqr-ffi
 [Fully Noded]: https://github.com/Fonta1n3/FullyNoded
 
 ### Satsigner
