fix: remove backticks from Electrum, QR, NFC, and Sankey in Satsigner section
- Remove backticks around Electrum, QR, NFC, and Sankey references
- Update corresponding link references for consistency
- Maintains consistent formatting style throughout the document

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -346,14 +346,14 @@ standardized, readable instructions instead of more complex configuration files.
 Clear setup flows for `watch-only` and `multisig` wallets make coordination
 easier across devices.
 
-Satsigner improved synchronization reliability by integrating an [`Electrum`]
-backend with progressive loading and detailed error handling. `QR` and `NFC`
+Satsigner improved synchronization reliability by integrating an [Electrum]
+backend with progressive loading and detailed error handling. QR and NFC
 transfer handling now supports multi-part data movement between devices,
 reducing errors when signing transactions offline. These changes make it easier
 to monitor or update cold storage securely from a mobile phone.
 
 A major update added the transaction graph explorer, which visualizes inputs and
-outputs in a [`Sankey`] style flow diagram. This helps users see where coins
+outputs in a [Sankey] style flow diagram. This helps users see where coins
 come from and where they go, improving understanding of spending patterns and
 privacy posture.
 
@@ -370,8 +370,8 @@ personal control that define Bitcoin self-custody.
 [Satsigner]: https://satsigner.com/
 [funding from OpenSats]: /blog/bitcoin-grants-feb-2024#satsigner
 [descriptor-native multisignature]: https://github.com/satsigner/satsigner/commit/bb47b855b44bd9bffb7d18b57c64616a1b202b64
-[`Electrum`]: https://github.com/spesmilo/electrum
-[`Sankey`]: https://en.wikipedia.org/wiki/Sankey_diagram
+[Electrum]: https://github.com/spesmilo/electrum
+[Sankey]: https://en.wikipedia.org/wiki/Sankey_diagram
 [Sparrow]: https://sparrowwallet.com/
 [Specter]: https://specter.solutions/
 
