fix: simplify bLIP reference in Blixt Wallet section
- Remove backticks around bLIP and change to lowercase
- Restructure text to make 'open protocol draft' the link text
- Update link reference for consistency
- Improves text flow and maintains consistent formatting

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -129,8 +129,8 @@ invoice for payment.
 >
 ><cite>—Hampus Sjöberg</cite>
 
-Released on Android in [version 0.6.9-420] and documented as an open protocol
-draft ([`bLIP`]), Lightning Box is available for other wallets to adopt.
+Released on Android in [version 0.6.9-420] and documented as an [open protocol
+draft][blip], Lightning Box is available for other wallets to adopt.
 
 These improvements make Blixt a dependable, self-custodial wallet and a model
 for secure Lightning applications. Ongoing progress on push-to-wake handling,
@@ -145,7 +145,7 @@ trajectory.
 [Lightning Box]: https://github.com/hsjoberg/lightning-box
 [updates to Neutrino]: https://github.com/lightninglabs/neutrino/pull/300
 [version 0.6.9-420]: https://github.com/hsjoberg/blixt-wallet/releases/tag/v0.6.9-420
-[`bLIP`]: https://github.com/hsjoberg/blips/blob/lnurl-forwarding/blip-lnurlforward.md
+[blip]: https://github.com/hsjoberg/blips/blob/lnurl-forwarding/blip-lnurlforward.md
 
 ### Blitz Wallet
 
