fix: capitalize Bitcoin in blog post summary for consistency

--- a/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
+++ b/data/blog/advancements-in-bitcoin-and-lightning-wallets.mdx
@@ -5,7 +5,7 @@ tags: ['OpenSats', 'bitcoin', 'lightning', 'impact']
 authors: ['default', 'arvin', 'dergigi']
 images: ['/static/images/blog/86-advancements-in-bitcoin-and-lightning-wallets.jpg']
 draft: false
-summary: "An impact report from the front-lines of bitcoin and Lightning wallet development."
+summary: "An impact report from the front-lines of Bitcoin and Lightning wallet development."
 ---
 
 Wallet and node software form the core of Bitcoin's free and open financial
