docs: add 2025-Q3 meeting minutes link to transparency page

--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -86,6 +86,7 @@ as in the internal and external processes of our organization.
 - [2024-Q4](/docs/minutes/2024-Q4.pdf)
 - [2025-Q1](/docs/minutes/2025-Q1.pdf)
 - [2025-Q2](/docs/minutes/2025-Q2.pdf)
+- [2025-Q3](/docs/minutes/2025-Q3.pdf)
 
 [coi]: /docs/bylaws.pdf
 [tax]: /docs/tax.pdf
