Revise intro section for clarity
Updated the announcement of the latest wave of grants to clarify the source and purpose, enhancing the message's accessibility and support for the nostr ecosystem.

--- a/data/blog/thirteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/thirteenth-wave-of-nostr-grants.mdx
@@ -8,9 +8,9 @@ draft: false
 summary: "OpenSats is funding nine more open-source projects advancing the nostr ecosystem."
 ---
 
-We are pleased to announce the latest wave of grants dedicated to advancing the
-nostr ecosystem. OpenSats' mission is to support open-source projects that make
-nostr more accessible, secure, decentralized, and easy to use.
+We are pleased to announce the latest wave of grants from The Nostr Fund, dedicated 
+to advancing the nostr ecosystem by supporting builders working to make nostr more 
+accessible, secure, and decentralized.
 
 In this wave, we highlight four projects that span creator tools, community
 infrastructure, archival systems, and distributed collaboration. Five additional
@@ -34,12 +34,11 @@ Grant renewals:
 - 0xchat ([10-2023])
 - Damus ([07-2023])
 
-This support is made possible by donors who believe in an open,
-censorship-resistant communications layer for the internet, and by the builders
-making that a reality.
+This support is made possible by the generosity of donors who believe in an open, 
+censorship-resistant communications layer for the internet, and by the builders 
+turning that vision into reality.
 
-Nostr grants are sourced from The Nostr Fund. To help us support the nostr
-ecosystem, please consider making a donation.
+To help strengthen the nostr ecosystem, please consider supporting The Nostr Fund.
 
 <center>
     <DonateToNostrFundButton/>
@@ -131,8 +130,7 @@ License: MIT
 [PostgreSQL]: https://www.postgresql.org/about/
 [NIP-11]: https://github.com/nostr-protocol/nips/blob/master/11.md
 [NIP-66]: https://github.com/nostr-protocol/nips/blob/master/66.md
-[Data Vending Machine]:
-    https://github.com/nostr-protocol/nips/blob/bcaad2957d0e9cec20e4265298d2788be87d3190/90.md
+[Data Vending Machine]: https://github.com/nostr-protocol/nips/blob/bcaad2957d0e9cec20e4265298d2788be87d3190/90.md
 [Bigbrotr/bigbrotr]: https://github.com/Bigbrotr/bigbrotr
 
 ### Grasp
