Revise grant renewal dates and links format
Updated grant renewal dates and links to use a more readable format.

--- a/data/blog/thirteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/thirteenth-wave-of-nostr-grants.mdx
@@ -28,11 +28,11 @@ First-time project grants:
 
 Grant renewals:
 
-- Jumble.Social ([06-2025])
-- Nostr Safebox ([12-2024])
-- Coop ([11-2024])
-- 0xchat ([10-2023])
-- Damus ([07-2023])
+- Jumble.Social ([Jun. 2025])
+- Nostr Safebox ([Dec. 2024])
+- Coop ([Nov. 2024])
+- 0xchat ([Oct. 2023])
+- Damus ([Jul. 2023])
 
 This support is made possible by the generosity of donors who believe in an open, 
 censorship-resistant communications layer for the internet, and by the builders 
@@ -46,11 +46,11 @@ To help strengthen the nostr ecosystem, please consider supporting The Nostr Fun
 
 Let's take a closer look at the projects receiving their first-time grants.
 
-[06-2025]: /blog/twelfth-wave-of-nostr-grants#jumble
-[12-2024]: /blog/9th-wave-of-nostr-grants#nostr-safebox
-[11-2024]: /blog/8th-wave-nostr-grants#coop
-[10-2023]: /blog/nostr-grants-october-2023#0xchat
-[07-2023]: /blog/nostr-grants-july-2023#damus
+[Jun. 2025]: /blog/twelfth-wave-of-nostr-grants#jumble
+[Dec. 2024]: /blog/9th-wave-of-nostr-grants#nostr-safebox
+[Nov. 2024]: /blog/8th-wave-nostr-grants#coop
+[Oct. 2023]: /blog/nostr-grants-october-2023#0xchat
+[Jul. 2023]: /blog/nostr-grants-july-2023#damus
 
 ---
 
