Revise renewed project grants with updated links and dates

--- a/data/blog/10th-wave-of-nostr-grants.mdx
+++ b/data/blog/10th-wave-of-nostr-grants.mdx
@@ -28,9 +28,9 @@ The four first-time project grants in this wave are:
 
 In addition, OpenSats has renewed project grants for:
 
-- [futr](/blog/7th-wave-of-nostr-grants#futr)
-- [Npub.cash](/blog/nostr-grants-july-2024#npubcash)
-- [Notedeck](/blog/7th-wave-of-nostr-grants#notedeck)
+- futr ([Sep. 2024](/blog/7th-wave-of-nostr-grants#futr))
+- Notedeck ([Sep. 2024](/blog/7th-wave-of-nostr-grants#notedeck))
+- Npub.cash ([Jul. 2024](blog/nostr-grants-july-2024#npubcash))
 
 Our ability to support these projects is made possible by the generosity of our
 donors. If you would like to help us continue funding important advancements
