Update Wave 11 Bitcoin renewals (links, dates)
Changes
- Fix in-article anchors for the renewals list.
- Add announcement dates (e.g., Jul. 2023) next to each item.
- Link each date to the corresponding announcement post.

Build Preview
- TODO

--- a/data/blog/elevent-wave-of-bitcoin-grants.mdx
+++ b/data/blog/elevent-wave-of-bitcoin-grants.mdx
@@ -25,10 +25,10 @@ The three first-time project grants in this wave are:
 
 In addition, OpenSats has renewed project grants for:
 
-- [Payjoin](/blog/bitcoin-grants-july-2023#payjoin-dev-kit)
-- [Mostro](/blog/nostr-grants-july-2024#mostro)
-- [P2Pool v2](https://github.com/pool2win/p2pool-v2) (evolved from p2pool,
-  including [Braidpool](/blog/bitcoin-grants-feb-2024#braidpool))
+- Mostro ([Jul. 2024](/blog/nostr-grants-july-2024#mostro))
+- [P2Pool v2](https://github.com/pool2win/p2pool-v2) (evolved from p2pool, 
+incl. Braidpool [Feb. 2024](/blog/bitcoin-grants-feb-2024#braidpool))
+- Payjoin ([Jul. 2023](/blog/bitcoin-grants-july-2023#payjoin-dev-kit))
 
 All of the above grants are sourced from our General Fund, made possible by the
 generosity of our donors. Help us support free and open-source projects by
