--- a/data/blog/tenth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/tenth-wave-of-bitcoin-grants.mdx
@@ -25,9 +25,9 @@ The three first-time project grants in this wave are:
 
 In addition to the above, OpenSats has renewed project grants for:
 
-- [Floresta](/blog/bitcoin-grants-september-2024-7th-wave#floresta)
-- [Krux](/blog/bitcoin-grants-july-2024#krux)
-- [Krux-Installer](/blog/bitcoin-grants-july-2024#krux-installer)
+- Floresta ([Sep. 2024](/blog/bitcoin-grants-september-2024-7th-wave#floresta))
+- Krux ([Jul. 2024](/blog/bitcoin-grants-july-2024#krux))
+- Krux-Installer ([Jul. 2024](/blog/bitcoin-grants-july-2024#krux-installer))
 
 Thanks to the generosity of our donors, OpenSats can actively support the
 open-source developers and projects that are building key infrastructure
