Update Wave 14 Bitcoin renewals (links, dates) (#504)

--- a/data/blog/fourteenth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/fourteenth-wave-of-bitcoin-grants.mdx
@@ -24,19 +24,12 @@ The four first-time grant recipients are:
 
 The six grant renewals will go to:
 
-- [Cove][cove]
-- [Stratum V2][stratum-v2]
-- [BTCPay Server][btcpay-server]
-- [Satsie's Pocket Guides][satsies]
-- [Daniella Brozzoni][brozzoni]
-- [L0rinc][l0rinc]
-
-[cove]: /blog/bitcoin-grants-july-2024#cove
-[stratum-v2]: /blog/bitcoin-and-nostr-grants-august-2023#stratum-v2-testing--benchmarking-tool
-[btcpay-server]: /blog/bitcoin-grants-july-2023#btcpay-server
-[satsies]: /blog/second-wave-of-education-grants#satsies-pocket-guides
-[brozzoni]: /blog/more-for-core#danielabrozzoni
-[l0rinc]: /blog/more-for-core#l0rinc
+- BTCPay Server ([Jul. 2023](/blog/bitcoin-grants-july-2023#btcpay-server))
+- Stratum V2 ([Aug. 2023](/blog/bitcoin-and-nostr-grants-august-2023#stratum-v2-testing--benchmarking-tool))
+- Cove ([Jul. 2024](/blog/bitcoin-grants-july-2024#cove))
+- Satsie's Pocket Guides ([Sep. 2024](/blog/second-wave-of-education-grants#satsies-pocket-guides))
+- Daniella Brozzoni ([Jan. 2025](/blog/more-for-core#danielabrozzoni))
+- L0rinc ([Jan. 2025](/blog/more-for-core#l0rinc))
 
 Each of these projects contributes to keeping Bitcoin decentralized,
 transparent, and user-driven, while ensuring it remains robust and accessible.
@@ -51,6 +44,7 @@ wave, consider donating to our General Fund.
 
 Let's take a closer look at these projects to discover their purpose, impact,
 and the value they bring to the Bitcoin ecosystem.
+
 
 ---
 
