Edit decentralized -> resilient
Co-authored-by: Gigi <109058+dergigi@users.noreply.github.com>

--- a/data/blog/thirteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/thirteenth-wave-of-nostr-grants.mdx
@@ -10,7 +10,7 @@ summary: "OpenSats is funding nine more open-source projects advancing the nostr
 
 We are pleased to announce the latest wave of grants from The Nostr Fund, dedicated 
 to advancing the nostr ecosystem by supporting builders working to make nostr more 
-accessible, secure, and decentralized.
+accessible, secure, and resilient.
 
 In this wave, we highlight four projects that span creator tools, community
 infrastructure, archival systems, and distributed collaboration. Five additional
