Edit supporting -> donating to
Co-authored-by: Gigi <109058+dergigi@users.noreply.github.com>

--- a/data/blog/thirteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/thirteenth-wave-of-nostr-grants.mdx
@@ -38,7 +38,7 @@ This support is made possible by the generosity of donors who believe in an open
 censorship-resistant communications layer for the internet, and by the builders 
 turning that vision into reality.
 
-To help strengthen the nostr ecosystem, please consider supporting The Nostr Fund.
+To help strengthen the nostr ecosystem, please consider donating to The Nostr Fund.
 
 <center>
     <DonateToNostrFundButton/>
