Edit capitalization of Git -> git
Co-authored-by: Gigi <109058+dergigi@users.noreply.github.com>

--- a/data/blog/thirteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/thirteenth-wave-of-nostr-grants.mdx
@@ -135,7 +135,7 @@ License: MIT
 
 ### Grasp
 
-[Grasp] is a distributed, nostr-native alternative to centralized Git hosting
+[Grasp] is a distributed, nostr-native alternative to centralized git hosting
 platforms. Developed by returning grantee [Dan
 Conway,](/blog/nostr-grants-july-2023#code-collaboration-over-nostr) who
 initially worked on a Git-over-nostr proof of concept, the Grasp project extends
