Edit capitalization of Git -> git
Co-authored-by: Gigi <109058+dergigi@users.noreply.github.com>

--- a/data/blog/thirteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/thirteenth-wave-of-nostr-grants.mdx
@@ -138,7 +138,7 @@ License: MIT
 [Grasp] is a distributed, nostr-native alternative to centralized git hosting
 platforms. Developed by returning grantee [Dan
 Conway,](/blog/nostr-grants-july-2023#code-collaboration-over-nostr) who
-initially worked on a Git-over-nostr proof of concept, the Grasp project extends
+initially worked on a git-over-nostr proof of concept, the Grasp project extends
 that work by bringing the collaborative model of [Blossom] to software
 development. It applies nostr's decentralized principles to version control.
 Built around [NIP-34], it allows repositories, commits, and merges to be
