--- a/data/blog/thirteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/thirteenth-wave-of-nostr-grants.mdx
@@ -145,7 +145,7 @@ Built around [NIP-34], it allows repositories, commits, and merges to be
 authorized and verified directly through nostr events.
 
 With support from this grant, Grasp will deliver a library for nostr clients to
-interact with Git data and pull requests, a high-performance Git plugin, and
+interact with git data and pull requests, a high-performance git plugin, and
 synchronization tools to maintain reliability across distributed environments.
 The project will also define a clear specification and collaborate with other
 developers to grow an open ecosystem of nostr-based Git tools, positioning Grasp
