Edit capitalization of Git -> git
Co-authored-by: Gigi <109058+dergigi@users.noreply.github.com>

--- a/data/blog/thirteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/thirteenth-wave-of-nostr-grants.mdx
@@ -148,7 +148,7 @@ With support from this grant, Grasp will deliver a library for nostr clients to
 interact with git data and pull requests, a high-performance git plugin, and
 synchronization tools to maintain reliability across distributed environments.
 The project will also define a clear specification and collaborate with other
-developers to grow an open ecosystem of nostr-based Git tools, positioning Grasp
+developers to grow an open ecosystem of nostr-based git tools, positioning Grasp
 as a decentralized alternative to existing code-hosting platforms.
 
 Repository: [danconwaydev.com/grasp]  
